--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Temperatura y Humedad</title>
+    <title>Sensor Ambiental Did&aacute;ctico para Invernadero</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <h1>Temperatura y Humedad en tu casa</h1>
+        <h1>Temperatura y Humedad del Invernadero</h1>
       </div>
       <div class="row">
         <h2>Última Medición: <span id="lastMeasureDate"></span></h2>
@@ -25,6 +25,9 @@
       </div>
       <div class="row">
         <h2>Humedad: <span id="hum"></span> %HR</h2>
+      </div>
+      <div class="row">
+        <h2>&Uacute;ltimas mediciones</h2>
       </div>
       <div class="row">
         <canvas id="tempCanvas"></canvas>
