--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -15,103 +15,155 @@
   <body>
     <div class="container">
       <div class="row">
-        <h1>Reportes</h1>
+        <div class="col">
+          <h1>Reportes</h1>
+        </div>
       </div>
+      {% if success is not none %}
       <div class="row">
-        <h2>Ver Reporte</h2>
-        <p>
-          La lista mostrará el nombre del reporte, una T y/o H en caso de que
-          ese reporte incluya Temperatura y/o Humedad respectivamente y las
-          fechas de inicio y fin del reporte.
-        </p>
-        <form action="get_report" method="GET">
-          <div class="form-group">
-            <label for="reportSelect">Seleccionar Reporte</label>
-            <select class="form-control" id="reportSelect" name="reportid">
-              <option disabled>---</option>
-              {% for item in data %}
-              <option value="{{ item[0] }}">{{ item[1] }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <button type="submit" class="btn btn-primary">Ver</button>
-        </form>
-      </div>
-      <div class="row">
-        <h2>Crear Reporte</h2>
-      </div>
-      <div class="row">
-        <form action="report" method="POST">
-          <div class="form-group">
-            <label for="reportName">Nombre del Reporte</label>
-            <input
-              type="text"
-              class="form-control col-6"
-              id="reportName"
-              placeholder="Nombre del Reporte"
-              name="Name"
-              required
-            />
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="tempCheck"
-              name="Temperature"
-            />
-            <label class="form-check-label" for="defaultCheck1">
-              Inclu&iacute;r Temperatura
-            </label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="humCheck"
-              name="Humidity"
-            />
-            <label class="form-check-label" for="defaultCheck1">
-              Inclu&iacute;r Humedad
-            </label>
-          </div>
-          <div class="form-group row">
-            <label for="startDate" class="col-4 col-form-label"
-              >Fecha de Inicio</label
-            >
-            <div class="col-8">
-              <input
-                class="form-control"
-                type="datetime-local"
-                name="StartDate"
-                id="startDate"
-                required
-              />
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="stopDate" class="col-4 col-form-label"
-              >Fecha de Fin</label
-            >
-            <div class="col-8">
-              <input
-                class="form-control"
-                type="datetime-local"
-                name="StopDate"
-                id="stopDate"
-                required
-              />
-            </div>
-          </div>
-          <button type="submit" class="btn btn-success" id="createBtn" disabled>
-            Crear</button
-          ><small class="text-muted" id="createMsg"
-            >&nbsp; Debe elegir al menos una opción de Temperatura o
-            Humedad</small
+        <div class="col">
+          {% if success %}
+          <div
+            class="alert alert-success alert-dismissible fade show"
+            role="alert"
           >
-        </form>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <strong>Reporte Creado!</strong>
+          </div>
+          {% else %}
+          <div
+            class="alert alert-danger alert-dismissible fade show"
+            role="alert"
+          >
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <strong>Error! </strong> No hay mediciones para el rango
+            seleccionado. No se cre&oacute; el reporte.
+          </div>
+          {% endif %}
+        </div>
+      </div>
+      {% endif %}
+
+      <div class="row">
+        <div class="col">
+          <h2>Ver Reporte</h2>
+          <p>
+            La lista mostrará el nombre del reporte, una T y/o H en caso de que
+            ese reporte incluya Temperatura y/o Humedad respectivamente y las
+            fechas de inicio y fin del reporte.
+          </p>
+          <form action="get_report" method="GET">
+            <div class="form-group">
+              <label for="reportSelect">Seleccionar Reporte</label>
+              <select class="form-control" id="reportSelect" name="reportid">
+                <option disabled>---</option>
+                {% for item in data %}
+                <option value="{{ item[0] }}">{{ item[1] }}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Ver</button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2>Crear Reporte</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <form action="report" method="POST">
+            <div class="form-group">
+              <label for="reportName">Nombre del Reporte</label>
+              <input
+                type="text"
+                class="form-control col-6"
+                id="reportName"
+                placeholder="Nombre del Reporte"
+                name="ReportName"
+                required
+              />
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="tempCheck"
+                name="Temperature"
+              />
+              <label class="form-check-label" for="defaultCheck1">
+                Inclu&iacute;r Temperatura
+              </label>
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="humCheck"
+                name="Humidity"
+              />
+              <label class="form-check-label" for="defaultCheck1">
+                Inclu&iacute;r Humedad
+              </label>
+            </div>
+            <div class="form-group row">
+              <label for="startDate" class="col-2 col-form-label"
+                >Fecha de Inicio</label
+              >
+              <div class="col-4">
+                <input
+                  class="form-control"
+                  type="datetime-local"
+                  name="StartDate"
+                  id="startDate"
+                  required
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="stopDate" class="col-2 col-form-label"
+                >Fecha de Fin</label
+              >
+              <div class="col-4">
+                <input
+                  class="form-control"
+                  type="datetime-local"
+                  name="StopDate"
+                  id="stopDate"
+                  required
+                />
+              </div>
+            </div>
+            <button
+              type="submit"
+              class="btn btn-success"
+              id="createBtn"
+              disabled
+            >
+              Crear</button
+            ><small class="text-muted" id="createMsg"
+              >&nbsp; Debe elegir al menos una opción de Temperatura o
+              Humedad</small
+            >
+          </form>
+        </div>
       </div>
     </div>
 
